--- a/public/app/index.html
+++ b/public/app/index.html
@@ -5,7 +5,9 @@
   <title></title>
 </head>
 <body>
-  <div class="row"></div>
+  <div class="row">
+    <div class="col-lg-"
+  </div>
   <h2>Hello Facebook Hack!</h2>
 </body>
 </html>
