--- a/public/app/index.html
+++ b/public/app/index.html
@@ -2,14 +2,23 @@
 <html>
 <head lang="en">
   <meta charset="UTF-8">
+
+  <link type="text/css" rel="stylesheet" href="/public/bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link type="text/css" rel="stylesheet" href="/public/bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
+
   <title></title>
 </head>
 <body>
   <div class="row">
     <div class="col-lg-2 col-md-2 col-sm-2 col-xs-0"></div>
     <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-        <h1 class="text-center">Hello Facebook Hack!!!!</h1>
+        <h1 class="text-primary text-center">Hello Facebook Hack!!!!</h1>
     </div>
   </div>
+
+  <script src="/public/bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="/public/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="/public/bower_components/knockout/dist/knockout.js"></script>
+
 </body>
 </html>
