--- a/public/app/Home.html
+++ b/public/app/Home.html
@@ -50,7 +50,7 @@
 <div id="status">
 </div>
 
-<script src="public/bower_components/knockout/dist/knockout.js"></script>
+<script src="../bower_components/knockout/dist/knockout.js"></script>
 <script src="main_js.js"></script>
 <script>ko.applyBindings(new WishListViewModel());</script>
 
