--- a/public/app/Home.html
+++ b/public/app/Home.html
@@ -9,6 +9,8 @@
 
 
 <body>
+
+
 <form action="action_page.php">
   Product:<br>
   <input type="text" name="product" value="">
@@ -21,6 +23,23 @@
   <br><br>
   <input type="submit" value="Submit">
 </form>
+
+<form role="form">
+  <div class="form-group">
+    <label for="email">Email address:</label>
+    <input type="email" class="form-control" id="email">
+  </div>
+  <div class="form-group">
+    <label for="pwd">Password:</label>
+    <input type="password" class="form-control" id="pwd">
+  </div>
+  <div class="checkbox">
+    <label><input type="checkbox"> Remember me</label>
+  </div>
+  <button type="submit" class="btn btn-default">Submit</button>
+</form>
+
+
 
 <button onclick="logout_of_fb()">LOG OUT</button>
 
