--- a/public/app/index.html
+++ b/public/app/index.html
@@ -1,24 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-  <meta charset="UTF-8">
+    <meta charset="UTF-8">
 
-  <link type="text/css" rel="stylesheet" href="/public/bower_components/bootstrap/dist/css/bootstrap.min.css">
-  <link type="text/css" rel="stylesheet" href="/public/bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
+    <link type="text/css" rel="stylesheet" href="/public/bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link type="text/css" rel="stylesheet" href="/public/bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
+    <link type='text/css' rel='stylesheet' href='http://fonts.googleapis.com/css?family=Montserrat'>
+    <link type='text/css' rel='stylesheet' href='http://fonts.googleapis.com/css?family=Montserrat'>
+    <link type='text/css' rel='stylesheet' href='http://sscol.jebal.comuv.com/css/font.css'>
+    <link type='text/css' rel='stylesheet' href='/public/app/styles/login.css'>
 
-  <title></title>
+    <title></title>
 </head>
 <body>
-  <div class="row">
-    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-0"></div>
-    <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-        <h1 class="text-primary text-center">Hello Facebook Hack!!!!</h1>
-    </div>
-  </div>
+<div class="row" id="main-page">
+    <div data-bind="template: { name: currentView }"></div>
+</div>
 
-  <script src="/public/bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="/public/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="/public/bower_components/knockout/dist/knockout.js"></script>
+<script src="/public/bower_components/jquery/dist/jquery.min.js"></script>
+<script src="/public/bower_components/jpillora/jquery.rest/dist/1/jquery.rest.min.js"></script>
+<script src="/public/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/public/bower_components/knockout/dist/knockout.js"></script>
+<script src="/public/bower_components/ko.remote-template-engine/dist/ko.remote-template-engine.min.js"></script>
+<script src="/public/bower_components/js-signals/dist/signals.min.js"></script>
+<script src="/public/bower_components/hasher/dist/js/hasher.min.js"></script>
+<script src="/public/bower_components/crossroads/dist/crossroads.min.js"></script>
+
+<script src="/public/app/js/comm.js"></script>
+<script src="/public/app/js/app.js"></script>
+<script src="/public/app/js/controllers/main.js"></script>
+<script src="/public/app/js/models/main.js"></script>
 
 </body>
 </html>
