pulllData.js added

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -30,6 +30,8 @@
 <script src="/public/app/js/app.js"></script>
 <script src="/public/app/js/controllers/main.js"></script>
 <script src="/public/app/js/models/main.js"></script>
+<script src="/public/app/js/models/pullData.js"></script>
+
 
 </body>
 </html>
