--- a/public/app/index.html
+++ b/public/app/index.html
@@ -15,13 +15,15 @@
 <body>
 <div class="row" id="main-page">
     <div data-bind="template: { name: currentView }"></div>
+    <br/><br/><br/>
 </div>
 
-<div class="row" id="main-page">
-    <div>
+<!-- <div>
         <button onclick="getUserData()">button</button>
     </div>
-</div>
+*/ -->
+
+<div class="row" id="main-page"></div>
 
 <script src="/public/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="/public/bower_components/jpillora/jquery.rest/dist/1/jquery.rest.min.js"></script>
