Auto load of getUserData()

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -18,10 +18,10 @@
     <br/><br/><br/>
 </div>
 
-<!-- <div>
+    <div>
         <button onclick="getUserData()">button</button>
     </div>
-*/ -->
+
 
 <div class="row" id="main-page"></div>
 
