--- a/public/app/index.html
+++ b/public/app/index.html
@@ -13,8 +13,36 @@
     <title></title>
 </head>
 <body>
+<script>
+    window.fbAsyncInit = function () {
+        FB.init({
+            appId: '419843501540998',
+            cookie: true,  // enable cookies to allow the server to access
+                           // the session
+            xfbml: true,  // parse social plugins on this page
+            version: 'v2.4' // use version 2.4
+        });
+
+        FB.getLoginStatus(function (response) {
+            statusChangeCallback(response);
+        });
+    };
+
+    (function (d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {
+            return;
+        }
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "//connect.facebook.net/en_US/sdk.js";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+
+</script>
 <div class="row" id="main-page">
     <div data-bind="template: { name: currentView }"></div>
+    <span id="status"></span>
     <br/><br/><br/>
 </div>
 
