--- a/public/app/index.html
+++ b/public/app/index.html
@@ -2,13 +2,15 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-
+<!--
     <link type="text/css" rel="stylesheet" href="/public/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="/public/bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
     <link type='text/css' rel='stylesheet' href='http://fonts.googleapis.com/css?family=Montserrat'>
     <link type='text/css' rel='stylesheet' href='http://fonts.googleapis.com/css?family=Montserrat'>
     <link type='text/css' rel='stylesheet' href='http://sscol.jebal.comuv.com/css/font.css'>
     <link type='text/css' rel='stylesheet' href='/public/app/styles/login.css'>
+ -->
+    <link rel="stylesheet" type="text/css" href="/public/app/styles/home.css" />
 
     <title></title>
 </head>
@@ -45,10 +47,6 @@
     <span id="status"></span>
     <br/><br/><br/>
 </div>
-
-    <div>
-        <button onclick="getUserData()">button</button>
-    </div>
 
 
 <div class="row" id="main-page"></div>
